# rose_msgs

contact_sensor_msgs/: CMakeLists.txt  package.xml
contact_sensor_msgs/msg/: bumper.msg  bumpers.msg
roscomm/: CMakeLists.txt  package.xml
roscomm/include/: action_result_message.hpp  parameter_request_message.hpp  vector_serialization.hpp
roscomm/include/roscomm/: conversion.hpp  conversion_bool.hpp  conversion_bool_list.hpp  conversion_int32_t.hpp  conversion_int32_t_list.hpp
roscomm/src/: action_result_message.cpp  parameter_request_message.cpp
roscomm/srv/: do_one_arm_autonomous.srv  do_two_arm_autonomous.srv  go_to_waypoint.srv  toggle_customer_voice_capturer.srv  toggle_operator_cam.srv  toggle_operator_voice_capturer.srv
rose_base_msgs/: CMakeLists.txt  package.xml
rose_base_msgs/action/: cmd_velocity.action  wheelunit_states.action
rose_base_msgs/msg/: battery_state.msg  bumpers_state.msg  lift_command.msg  lift_state.msg  wheelunit_states.msg
