<package>
  <name>contact_sensor_msgs</name>
  <version>1.0.0</version>
  <description>
    This package contains messages for contact sensors.
  </description>
  <maintainer email="hendriks@robot-rose.nl">Okke Hendriks</maintainer>
  <license>BSD</license>

  <url></url>
  <author>Okke Hendriks</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>

  <export>
  </export>
</package>
