<?xml version="1.0"?>
<package>
  <name>rose_base_msgs</name>
  <version>0.0.0</version>
  <description>The rose base messages</description>

  <maintainer email="ohendriks@robot-rose.nl">Okke Hendriks</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>message_generation</build_depend>
  
  <run_depend>message_runtime</run_depend>

  <export>
  </export>
</package>
