<?xml version="1.0"?>
<package>
  <name>rose_base_msgs</name>
  <version>0.0.0</version>
  <description>The rose base messages</description>

  <maintainer email="ohendriks@robot-rose.nl">Okke Hendriks</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscomm</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>roscomm</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>
</package>
